<resources>
    <string name="app_name">CheckMeIn</string>
    <string name="app_title">CheckMeIn title</string>
    <string name="StID">Student ID</string>
    <string name="StName">Student Name</string>
    <string name="students_Count">X students</string>
    <string name="lblStudentName">Student Name:</string>
    <string name="txtStudentName">Student Name</string>
    <string name="txtStudentID">Student ID</string>
    <string name="lblStudentID">Student ID:</string>
    <string name="AddStudent">Add Student</string>
    <string name="Submit">Submit</string>
    <string name="Save">Update</string>
    <string name="btnRemove">Remove</string>
    <string name="lblWeek">Week X</string>
    <string name="lblMarkingInfo">Please select week and input Marking</string>
    <string name="lblSelectedWeek">Week:</string>
    <string name="lblMark">Mark:</string>
    <string-array name="weeks_array">
            <item>------</item>
            <item>Week 1</item>
            <item>Week 2</item>
            <item>Week 3</item>
            <item>Week 4</item>
            <item>Week 5</item>
            <item>Week 6</item>
            <item>Week 7</item>
            <item>Week 8</item>
            <item>Week 9</item>
            <item>Week 10</item>
            <item>Week 11</item>
            <item>Week 12</item>
            <item>Week 13</item>
        </string-array>
    <string-array name="Marks_array">
        <item>--</item>
        <item>NN</item>
        <item>PP</item>
        <item>CR</item>
        <item>DN</item>
        <item>HD</item>
        <item>HD+</item>
    </string-array>
</resources>
